src/main/java/com/example/moizaspringserver/global/error/security/CredentialsNotFoundException.java
package com.example.moizaspringserver.global.error.security;

import com.example.moizaspringserver.global.error.exception.CustomException;
import com.example.moizaspringserver.global.error.exception.ErrorCode;

public class CredentialsNotFoundException extends CustomException {

    public static final CustomException EXCEPTION = 
            new CredentialsNotFoundException();

    private CredentialsNotFoundException() {
        super(ErrorCode.CREDENTIALS_NOT_FOUND);
    }
}
